Add node gyp
