# src/server/ping.ts
@@ -1,0 +1,9 @@
+import * as express from "express";
+
+const router = express.Router();
+
+router.get("/", (req, res) => {
+    res.json({ping: "OK"});
+});
+
+export default router;
